<resources>
    <string name="app_name">Contacts</string>
    <string name="example">example@eample.com</string>
    <string name="your_password">Password</string>
    <string name="welcome_to_contacts">Welcome to Contacts</string>
    <string name="login">Login</string>
    <string name="your_email">Email</string>
    <string name="write_email">Please write Your Email.</string>
    <string name="write_password">Please write Your Password</string>
    <string name="keep_your_data_safe">Keep your data safe.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="write_name">Please write your name</string>
    <string name="name">Name</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="logout">logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_contact">Edit_Contact</string>
    <string name="delete_contact">delete_contact</string>
    <string name="add">add</string>
    <string name="phone">Phone</string>
</resources>