<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginview"
            type="com.example.contacts.ui.login.LoginViewModel" />

        <variable
            name="loginPresenter"
            type="com.example.contacts.ui.login.LoginPresenter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="82dp"
            android:contentDescription="@string/welcome_to_contacts"
            android:src="@drawable/chatting" />

        <RelativeLayout
            android:id="@+id/group_txs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/welcome_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif"
                android:text="@string/welcome_to_contacts"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_tx"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/keep_your_data_safe"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/group_ets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_txs"
            android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/your_email"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:counterMaxLength="254"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_email"
                android:hint="@string/your_password"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/design_default_color_primary_dark">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ti_password"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="@{(v)->loginPresenter.login()}"
                android:padding="8dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:cornerRadius="8dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp">

            <TextView
                android:id="@+id/tx_do_not"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_toEndOf="@+id/tx_do_not"
                android:layout_toRightOf="@+id/tx_do_not"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v)->loginPresenter.register()}"
                android:text="@string/register"
                android:textColor="@color/design_default_color_primary" />
        </RelativeLayout>

    </RelativeLayout>

</layout>